--- a/source/sass/components/btn.scss
+++ b/source/sass/components/btn.scss
@@ -1,15 +1,16 @@
 .btn{
   border: 2px solid #33bff5;
-  padding: 14px 35px;
-  background-color: #ffffff;
+  padding: 17px 35px;
+  background-color: #fff;
   border-radius: 0;
   color: #33bff5;
-  font-size:18px;
+  font-size: 18px;
   font-weight: 600;
+  line-height: 1;
 
   @media (max-width: 320px) {
     width: 100%;
-    padding: 12px;
+    padding: 15px;
     font-size:16px;
   }
 }
