--- a/source/css/style.css
+++ b/source/css/style.css
@@ -234,66 +234,66 @@ body {
       -ms-flex-direction: row;
           flex-direction: row;
   -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
+      flex-wrap: wrap; }
+
+.form__label-wrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 45%;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   margin-bottom: 30px; }
-  .form__wrapper .form__label {
-    width: 45%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    min-height: 150px; }
-    @media (max-width: 320px) {
-      .form__wrapper .form__label {
-        width: 100%;
-        min-height: auto; } }
-  .form__wrapper .form__label:nth-child(odd) {
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
-    margin-right: 55px; }
-    @media (max-width: 320px) {
-      .form__wrapper .form__label:nth-child(odd) {
-        margin-right: 0;
-        -webkit-box-pack: start;
-            -ms-flex-pack: start;
-                justify-content: flex-start; } }
-  .form__wrapper .form__label:nth-child(even) {
-    -webkit-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start; }
-  .form__wrapper .form__details {
-    max-width: 200px;
-    color: #555a5b; }
-  .form__wrapper .form__title {
-    font-size: 24px; }
-    @media (max-width: 320px) {
-      .form__wrapper .form__title {
-        font-size: 18px;
-        font-weight: 600;
-        margin: 10px 0; } }
-  .form__wrapper .form__descr {
-    font-size: 16px;
-    line-height: 30px;
-    font-weight: 400; }
-    @media (max-width: 320px) {
-      .form__wrapper .form__descr {
-        line-height: 23px; } }
-  @media (max-width: 320px) {
-    .form__wrapper .form__descr-brake {
-      display: block; } }
-  .form__wrapper .form__link {
-    text-decoration: underline;
-    color: #11b3f2;
-    cursor: pointer; }
-  .form__wrapper .form__input {
-    display: none; }
+  @media (max-width: 768px) {
+    .form__label-wrapper {
+      width: 100%;
+      margin-bottom: 15px; } }
+
+.form__label {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 250px; }
+
+.form__label-wrapper:nth-child(odd) {
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  margin-right: 30px; }
+  @media (max-width: 768px) {
+    .form__label-wrapper:nth-child(odd) {
+      margin-right: 0;
+      -webkit-box-align: start;
+          -ms-flex-align: start;
+              align-items: flex-start; } }
+
+.form__label-wrapper:nth-child(even) {
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start; }
+
+.form__link {
+  display: block;
+  text-decoration: underline;
+  color: #11b3f2;
+  cursor: pointer;
+  width: 41%; }
+  @media (max-width: 768px) {
+    .form__link {
+      margin-left: 40px;
+      width: 50%; } }
+
+.form__input {
+  display: none; }
 
 .form__radio-button {
   height: 20px;
@@ -325,6 +325,25 @@ body {
 
 .form__label .form__input:checked + .form__radio-button::after {
   opacity: 1; }
+
+.form__title {
+  font-size: 24px; }
+  @media (max-width: 320px) {
+    .form__title {
+      font-size: 18px;
+      font-weight: 600;
+      margin: 10px 0; } }
+
+.form__descr {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400; }
+  @media (max-width: 320px) {
+    .form__descr {
+      line-height: 23px; } }
+
+.form__descr-brake {
+  display: block; }
 
 .btn {
   border: 2px solid #33bff5;
