--- a/source/sass/components/form.scss
+++ b/source/sass/components/form.scss
@@ -1,77 +1,62 @@
-.form__wrapper {
+.form__wrapper{
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+}
+
+.form__label-wrapper{
+  display: flex;
+  width: 45%;
+  flex-direction: column;
   margin-bottom: 30px;
 
-  .form__label {
-    width: 45%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    min-height: 150px;
-
-    @media (max-width: 320px) {
-      width: 100%;
-      min-height: auto;
-    }
-  }
-
-  .form__label:nth-child(odd) {
-    justify-content: flex-end;
-    margin-right: 55px;
-
-    @media (max-width: 320px) {
-      margin-right: 0;
-      justify-content: flex-start;
-    }
-  }
-
-  .form__label:nth-child(even) {
-    justify-content: flex-start;
-  }
-
-  .form__details {
-    max-width: 200px;
-    color: #555a5b;
-  }
-
-  .form__title {
-    font-size: 24px;
-
-    @media (max-width: 320px) {
-      font-size: 18px;
-      font-weight: 600;
-      margin: 10px 0;
-    }
-  }
-
-  .form__descr {
-    font-size: 16px;
-    line-height: 30px;
-    font-weight: 400;
-
-    @media (max-width: 320px) {
-      line-height: 23px;
-    }
-  }
-
-  .form__descr-brake {
-    @media (max-width: 320px) {
-      display: block;
-    }
-  }
-
-  .form__link {
-    text-decoration: underline;
-    color: #11b3f2;
-    cursor: pointer;
-  }
-
-  .form__input {
-    display: none;
+  @media (max-width: 768px) {
+    width: 100%;
+    margin-bottom: 15px;
   }
 }
+
+.form__label{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 250px;
+}
+
+.form__label-wrapper:nth-child(odd){
+  align-items: flex-end;
+  margin-right: 30px;
+
+  @media (max-width: 768px) {
+    margin-right: 0;
+    align-items: flex-start;
+  }
+}
+
+.form__label-wrapper:nth-child(even){
+  align-items: flex-start;
+}
+
+
+
+.form__link {
+  display: block;
+  text-decoration: underline;
+  color: #11b3f2;
+  cursor: pointer;
+  width: 41%;
+
+  @media (max-width: 768px) {
+    margin-left: 40px;
+    width:50%;
+  }
+}
+
+.form__input {
+  display: none;
+}
+
+
 
 .form__radio-button {
   height: 20px;
@@ -103,4 +88,29 @@
 
 .form__label .form__input:checked + .form__radio-button::after {
   opacity: 1;
+}
+
+
+.form__title {
+  font-size: 24px;
+
+  @media (max-width: 320px) {
+    font-size: 18px;
+    font-weight: 600;
+    margin: 10px 0;
+  }
+}
+
+.form__descr {
+  font-size: 16px;
+  line-height: 30px;
+  font-weight: 400;
+
+  @media (max-width: 320px) {
+    line-height: 23px;
+  }
+}
+
+.form__descr-brake {
+  display: block;
 }
