--- a/source/sass/components/btn.scss
+++ b/source/sass/components/btn.scss
@@ -1,6 +1,6 @@
 .btn{
   border: 2px solid #33bff5;
-  padding: 17px 35px;
+  padding: 17px 40px;
   background-color: #fff;
   border-radius: 0;
   color: #33bff5;
@@ -13,4 +13,8 @@
     padding: 15px;
     font-size:16px;
   }
+}
+
+.btn--form{
+  padding: 17px 30px;
 }
