--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -26,6 +26,18 @@ body {
   clip: rect(0, 0, 0, 0);
 }
 
+.container{
+  width: 1027px;
+  padding-left: 15px;
+  padding-right: 15px;
+
+  @media (max-width: 320px) {
+    width: 320px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+}
+
 .no-gutter-left-desktop-only{
   padding-left: 0;
 
