--- a/source/sass/components/form-section.scss
+++ b/source/sass/components/form-section.scss
@@ -9,13 +9,13 @@
     margin: 10px 0;
 
     @media (max-width: 320px) {
-      font-size:16px;
+      font-size: 16px;
       line-height: 22px;
     }
   }
 
   .form-section__input {
-    padding: 17px 25px;
+    padding: 17px 20px;
     width: 50%;
     border: 2px solid #acacac;
 
@@ -31,6 +31,7 @@
 
   .form-section__input:last-child {
     border-left: none;
+    padding-left: 50px;
 
     @media (max-width: 320px) {
       padding-left: 30px;
