--- a/source/sass/components/navigation.scss
+++ b/source/sass/components/navigation.scss
@@ -19,7 +19,7 @@
 
 
   .navigation__site-nav {
-    justify-content: space-around;
+    justify-content: space-between;
     font-size: 18px;
 
     @media (max-width: 768px) {
@@ -30,16 +30,13 @@
   .navigation__site-nav-link,
   .navigation__user-nav-link {
     display: block;
-    padding: 10px;
+    padding: 15px 10px;
   }
 
   .navigation__user-nav {
     font-size: 15px;
     font-weight: 600;
-
-    @media (max-width: 768px) {
-      justify-content: space-between;
-    }
+    justify-content: space-between;
   }
 
   .navigation__user-nav-item {
