--- a/source/sass/components/select-section.scss
+++ b/source/sass/components/select-section.scss
@@ -1,5 +1,5 @@
 .select-section {
-  padding: 25px 0;
+  padding: 10px 0 50px 0;
   background-color: #ffffff;
   font-weight: 300;
 
@@ -15,12 +15,11 @@
   }
 
   .select-section__description {
-    font-size: 18px;
+    font-size: 16px;
     line-height: 1.4;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 
     @media (max-width: 320px) {
-      font-size: 16px;
       line-height: 20px;
       text-align: left;
     }
