--- a/source/css/style.css
+++ b/source/css/style.css
@@ -27,6 +27,11 @@ body {
   width: 1027px;
   padding-left: 15px;
   padding-right: 15px; }
+  @media (max-width: 768px) {
+    .container {
+      width: 768px;
+      padding-left: 20px;
+      padding-right: 20px; } }
   @media (max-width: 320px) {
     .container {
       width: 320px;
@@ -230,7 +235,7 @@ body {
   .select-section .select-section__description {
     font-size: 16px;
     line-height: 1.4;
-    margin-bottom: 10px; }
+    margin-bottom: 25px; }
     @media (max-width: 320px) {
       .select-section .select-section__description {
         line-height: 20px;
@@ -246,7 +251,7 @@ body {
           flex-direction: row;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-bottom: 30px; }
+  margin-bottom: 10px; }
 
 .form__label-wrapper {
   display: -webkit-box;
@@ -257,30 +262,36 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  margin-bottom: 5px; }
+  margin-bottom: 30px; }
   @media (max-width: 768px) {
     .form__label-wrapper {
       width: 100%;
       margin-bottom: 15px; } }
 
 .form__label {
+  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  width: 250px; }
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 210px;
+  margin-bottom: 15px; }
+  @media (max-width: 768px) {
+    .form__label {
+      width: 100%;
+      padding-left: 40px; } }
 
 .form__label-wrapper:nth-child(odd) {
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
-  margin-right: 30px; }
+  margin-right: 70px; }
   @media (max-width: 768px) {
     .form__label-wrapper:nth-child(odd) {
       margin-right: 0;
@@ -308,17 +319,20 @@ body {
   display: none; }
 
 .form__radio-button {
+  position: absolute;
   height: 20px;
   width: 20px;
   border: 1px solid #e5e5e5;
   border-radius: 50%;
   display: inline-block;
-  position: relative;
-  left: 0;
-  top: -3px;
+  left: -30px;
+  top: 45px;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#1e92d0));
-  background-image: linear-gradient(#ffffff, #1e92d0);
-  margin-right: 20px; }
+  background-image: linear-gradient(#ffffff, #1e92d0); }
+  @media (max-width: 768px) {
+    .form__radio-button {
+      left: 0;
+      top: 45px; } }
   .form__radio-button::after {
     content: "";
     display: block;
@@ -339,7 +353,8 @@ body {
   opacity: 1; }
 
 .form__title {
-  font-size: 24px; }
+  font-size: 24px;
+  margin-bottom: 10px; }
   @media (max-width: 320px) {
     .form__title {
       font-size: 18px;
