--- a/source/sass/scaffolding.scss
+++ b/source/sass/scaffolding.scss
@@ -31,6 +31,12 @@ body {
   padding-left: 15px;
   padding-right: 15px;
 
+  @media (max-width: 768px) {
+    width: 768px;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+
   @media (max-width: 320px) {
     width: 320px;
     padding-left: 20px;
