--- a/source/css/style.css
+++ b/source/css/style.css
@@ -1,391 +1,62 @@
-html {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box; }
-
-*,
-*::before,
-*::after {
-  -webkit-box-sizing: inherit;
-          box-sizing: inherit; }
-
-body {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", sans-serif;
-  font-style: normal;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400; }
-
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  clip: rect(0, 0, 0, 0); }
-
 .container {
-  width: 1027px;
-  padding-left: 15px;
-  padding-right: 15px; }
-  @media (max-width: 768px) {
-    .container {
-      width: 768px;
-      padding-left: 20px;
-      padding-right: 20px; } }
-  @media (max-width: 320px) {
-    .container {
-      width: 320px;
-      padding-left: 20px;
-      padding-right: 20px; } }
-
-.no-gutter-left-desktop-only {
-  padding-left: 0; }
-  @media (max-width: 768px) {
-    .no-gutter-left-desktop-only {
-      padding-left: 15px; } }
-
-.no-gutter-right-desktop-only {
-  padding-right: 0; }
-  @media (max-width: 768px) {
-    .no-gutter-right-desktop-only {
-      padding-right: 15px; } }
-
-.main-header {
-  background-color: #00497f;
-  font-size: 13px;
-  line-height: 30px; }
-  @media (max-width: 320px) {
-    .main-header {
-      font-size: 10px; } }
-  .main-header .main-header__list {
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end; }
-    @media (max-width: 320px) {
-      .main-header .main-header__list {
-        -webkit-box-pack: justify;
-            -ms-flex-pack: justify;
-                justify-content: space-between; } }
-  .main-header .main-header__list > li {
-    margin-left: 30px; }
-    @media (max-width: 320px) {
-      .main-header .main-header__list > li {
-        margin-left: 0; } }
-  .main-header .main-header__link {
-    display: block;
-    color: #ffffff;
-    padding: 6px 16px;
-    cursor: pointer; }
-    @media (max-width: 320px) {
-      .main-header .main-header__link {
-        padding: 5px; } }
-  .main-header .main-header__link:last-child {
-    padding-right: 0; }
-
-.navigation {
-  border-bottom: 1px solid #d9d9d9;
-  padding-top: 25px;
-  padding-bottom: 25px; }
-  @media (max-width: 320px) {
-    .navigation {
-      padding-top: 15px;
-      padding-bottom: 15px; } }
-  .navigation .navigation__site-nav,
-  .navigation .navigation__user-nav {
-    list-style: none;
-    margin: 0;
-    padding-left: 0;
-    color: #00487e;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    line-height: 1.2; }
-  .navigation .navigation__site-nav {
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    font-size: 18px; }
-    @media (max-width: 768px) {
-      .navigation .navigation__site-nav {
-        display: none; } }
-  .navigation .navigation__site-nav-link,
-  .navigation .navigation__user-nav-link {
-    display: block;
-    padding: 15px 10px; }
-  .navigation .navigation__user-nav {
-    font-size: 15px;
-    font-weight: 600;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between; }
-  .navigation .navigation__user-nav-item {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center; }
-  @media (max-width: 768px) {
-    .navigation .navigation__user-nav-link {
-      display: none; } }
-  .navigation .navigation__menu {
-    display: none; }
-    @media (max-width: 768px) {
-      .navigation .navigation__menu {
-        display: block; } }
-
-.navigation__img {
-  width: 25px;
-  height: 25px; }
-
-.about {
-  padding: 40px 0; }
-  @media (max-width: 320px) {
-    .about {
-      margin-bottom: 120px; } }
-  .about .about__img {
-    width: 100%; }
-  .about .about__title {
-    font-weight: 300;
-    font-size: 54px;
-    line-height: 1;
-    margin: 0;
-    margin-bottom: 30px;
-    color: #00487e; }
-    @media (max-width: 320px) {
-      .about .about__title {
-        font-size: 30px;
-        margin: 15px 0;
-        font-weight: 400; } }
-  .about .about__description {
-    font-size: 16px;
-    line-height: 22px;
-    color: #606465;
-    margin-bottom: 25px; }
-  .about .about__list {
-    padding-left: 20px; }
-
-.form-section {
-  background-color: #f5f5f6;
-  padding: 30px 0 40px; }
-  .form-section .form-section__title {
-    font-weight: 300;
-    font-size: 18px;
-    line-height: 30px;
-    margin: 10px 0; }
-    @media (max-width: 320px) {
-      .form-section .form-section__title {
-        font-size: 16px;
-        line-height: 22px; } }
-  .form-section .form-section__input {
-    padding: 17px 20px;
-    width: 50%;
-    border: 2px solid #acacac; }
-    @media (max-width: 768px) {
-      .form-section .form-section__input {
-        padding: 15px 10px;
-        margin-bottom: 10px; } }
-  .form-section .form-section__input:first-child {
-    border-right: none; }
-  .form-section .form-section__input:last-child {
-    border-left: none;
-    padding-left: 50px; }
-    @media (max-width: 320px) {
-      .form-section .form-section__input:last-child {
-        padding-left: 30px; } }
-  .form-section .form-section__input-wrapper {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row; }
-
-.select-section {
-  padding: 10px 0 50px 0;
-  background-color: #ffffff;
-  font-weight: 300; }
-  .select-section .select-section__title {
-    font-size: 38px;
-    line-height: 1.2;
-    color: #00497f; }
-    @media (max-width: 320px) {
-      .select-section .select-section__title {
-        font-size: 24px;
-        margin: 10px 0; } }
-  .select-section .select-section__description {
-    font-size: 16px;
-    line-height: 1.4;
-    margin-bottom: 25px; }
-    @media (max-width: 320px) {
-      .select-section .select-section__description {
-        line-height: 20px;
-        text-align: left; } }
-
-.form__wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: horizontal;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-bottom: 10px; }
-
-.form__label-wrapper {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  width: 46%;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  margin-bottom: 30px; }
-  @media (max-width: 768px) {
-    .form__label-wrapper {
-      width: 100%;
-      margin-bottom: 15px; } }
-
-.form__label {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start;
-  width: 210px;
-  margin-bottom: 15px; }
-  @media (max-width: 768px) {
-    .form__label {
-      width: 100%;
-      padding-left: 40px; } }
-
-.form__label-wrapper:nth-child(odd) {
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
-  margin-right: 70px; }
-  @media (max-width: 768px) {
-    .form__label-wrapper:nth-child(odd) {
-      margin-right: 0;
-      -webkit-box-align: start;
-          -ms-flex-align: start;
-              align-items: flex-start; } }
-
-.form__label-wrapper:nth-child(even) {
-  -webkit-box-align: start;
-      -ms-flex-align: start;
-          align-items: flex-start; }
-
-.form__link {
-  display: block;
-  text-decoration: underline;
-  color: #11b3f2;
-  cursor: pointer;
-  width: 46%; }
-  @media (max-width: 768px) {
-    .form__link {
-      margin-left: 40px;
-      width: 50%; } }
-
-.form__input {
-  display: none; }
-
-.form__radio-button {
-  position: absolute;
-  height: 20px;
-  width: 20px;
-  border: 1px solid #e5e5e5;
-  border-radius: 50%;
-  display: inline-block;
-  left: -30px;
-  top: 45px;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#1e92d0));
-  background-image: linear-gradient(#ffffff, #1e92d0); }
-  @media (max-width: 768px) {
-    .form__radio-button {
-      left: 0;
-      top: 45px; } }
-  .form__radio-button::after {
-    content: "";
-    display: block;
-    height: 5px;
-    width: 5px;
-    border-radius: 50%;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%);
-    background-color: #000000;
-    opacity: 0;
-    -webkit-transition: opacity 0.2s;
-    transition: opacity 0.2s; }
-
-.form__label .form__input:checked + .form__radio-button::after {
-  opacity: 1; }
-
-.form__title {
-  font-size: 24px;
-  margin-bottom: 10px; }
-  @media (max-width: 320px) {
-    .form__title {
-      font-size: 18px;
-      font-weight: 600;
-      margin: 10px 0; } }
-
-.form__descr {
-  font-size: 16px;
-  line-height: 22px;
-  font-weight: 400; }
-  @media (max-width: 320px) {
-    .form__descr {
-      line-height: 23px; } }
-
-.form__descr-brake {
-  display: block; }
+  width: 100%;
+  min-height: 500px;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#818181));
+  background-image: linear-gradient(to bottom, #ffffff, #818181);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff', endColorstr='#818181');
+  /*For IE7-8-9*/
+  height: 1%;
+  /*For IE7*/
+  text-align: center;
+  position: relative; }
 
 .btn {
-  border: 2px solid #33bff5;
-  padding: 17px 40px;
-  background-color: #fff;
-  border-radius: 0;
-  color: #33bff5;
-  font-size: 18px;
-  font-weight: 600;
-  line-height: 1; }
-  @media (max-width: 320px) {
+  padding: 15px;
+  padding-left: 50px;
+  background-color: #080808;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  cursor: pointer; }
+  @media (min-width: 960px) {
     .btn {
-      width: 100%;
-      padding: 15px;
-      font-size: 16px; } }
+      white-space: nowrap; } }
 
-.btn--form {
-  padding: 17px 30px; }
+.btn::before {
+  content: "";
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 20px;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%);
+          transform: translate(-50%);
+  opacity: 0.3;
+  border-radius: 10px;
+  z-index: 5; }
+
+.btn::after {
+  content: "";
+  display: block;
+  width: 33px;
+  height: 33px;
+  background-image: url("../img/icon.png");
+  background-size: contain;
+  position: absolute;
+  top: 50%;
+  left: 8px;
+  -webkit-transform: translateY(-50%);
+          transform: translateY(-50%); }
+
+.btn:hover {
+  background-color: #000000; }
+
+.btn:active {
+  background-color: rgba(0, 0, 0, 0.39); }
