--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,11 +1,64 @@
-@import "scaffolding.scss";
-@import "mixins.scss";
+.container {
+  width: 100%;
+  min-height: 500px; //для демонстрации;
+  background-image: linear-gradient(to bottom, #ffffff, #818181);
+  filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff', endColorstr='#818181');/*For IE7-8-9*/
+  height: 1%;/*For IE7*/
+  text-align: center;
+  position: relative;
+}
 
-@import "components/main-header.scss";
-@import "components/navigation.scss";
-@import "components/about.scss";
-@import "components/form-section.scss";
-@import "components/select-section.scss";
-@import "components/form.scss";
+.btn {
+  padding: 15px;
+  padding-left: 50px;
+  background-color: #080808;
+  color: #ffffff;
+  border: none;
+  border-radius: 10px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
 
-@import "components/btn.scss";
+
+  // на мобильном и планшете из-за отстутствия переноса строк кнопка может вылезать за пределы вьюпорта
+  @media (min-width: 960px){
+    white-space: nowrap;
+  }
+}
+
+.btn::before {
+  content: "";
+  background-color: #f2f2f2;
+  width: 100%;
+  height: 20px;
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%);
+  opacity: 0.3;
+  border-radius: 10px;
+  z-index: 5;
+}
+
+.btn::after{
+  content: "";
+  display: block;
+  width: 33px;
+  height: 33px;
+  background-image: url("../img/icon.png");
+  background-size: contain;
+  position: absolute;
+  top: 50%;
+  left: 8px;
+  transform: translateY(-50%);
+}
+
+.btn:hover{
+  background-color: #000000;
+}
+.btn:active{
+  background-color: rgba(0, 0, 0, 0.39);
+}
