--- a/source/css/style.css
+++ b/source/css/style.css
@@ -8,7 +8,8 @@
   height: 1%;
   /*For IE7*/
   text-align: center;
-  position: relative; }
+  position: relative;
+  height: 100vh; }
 
 .btn {
   padding: 15px;
