--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,5 +1,14 @@
+@font-face {
+  font-family: "Verdana";
+  src: url("../fonts/Verdana-Bold.woff2") format("woff2"),
+  url("../fonts/Verdana-Bold.woff") format("woff");
+  font-weight: bold;
+  font-style: normal;
+}
+
 .container {
   width: 100%;
+  min-height: 500px; //для демонстрации;
   background-image: linear-gradient(to bottom, #ffffff, #818181);
   filter: progid:DXImageTransform.Microsoft.gradient(GradientType=0,startColorstr='#ffffff', endColorstr='#818181');/*For IE7-8-9*/
   height: 1%;/*For IE7*/
@@ -9,17 +18,21 @@
 }
 
 .btn {
-  padding: 15px;
-  padding-left: 50px;
-  background-color: #080808;
+  padding: 25px 25px 25px 70px;
+  background-color: #171717;
   color: #ffffff;
   border: none;
-  border-radius: 10px;
+  border-radius: 15px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   cursor: pointer;
+  font-family: "Verdana", "Arial", sans-serif;
+  font-size: 16px;
+  -webkit-box-shadow: inset 0 2px 13px 2px rgba(255,255,255,0.61);
+  -moz-box-shadow: inset 0 2px 13px 2px rgba(255,255,255,0.61);
+  box-shadow: inset 0 2px 13px 2px rgba(255,255,255,0.61);
 
 
   // на мобильном и планшете из-за отстутствия переноса строк кнопка может вылезать за пределы вьюпорта
@@ -30,29 +43,32 @@
 
 .btn::before {
   content: "";
-  background-color: #f2f2f2;
+  background-image: url("../img/glare.png");
   width: 100%;
-  height: 20px;
+  height: 37px;
   display: block;
   position: absolute;
-  top: 0;
+  top: 2px;
   left: 50%;
   transform: translate(-50%);
-  opacity: 0.3;
-  border-radius: 10px;
+  opacity: 0.8;
+  border-radius: 15px;
   z-index: 5;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .btn::after{
   content: "";
   display: block;
-  width: 33px;
-  height: 33px;
+  width: 35px;
+  height: 35px;
   background-image: url("../img/icon.png");
   background-size: contain;
   position: absolute;
-  top: 50%;
-  left: 8px;
+  top: 54%;
+  left: 27px;
   transform: translateY(-50%);
 }
 
